--- a/style.css
+++ b/style.css
@@ -1,3 +1,112 @@
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	font-family: Roboto, sans-serif;
+}
+
 body {
+	background-color: #eee;
+}
+
+.bubble {
+	width: 300px;
+	height: 60px;
+	position: absolute;
+	top: 80%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	font-size: 28px;
+	text-align: center;
+	border-radius: 10px;
+	line-height: 60px;
 	background-color: #bec6c6;
+	opacity: 0;
+	transition: all 0.3s ;
+}
+
+.bubble__active {
+	opacity: 1;
+}
+
+.title {
+	width: 500px;
+	position: absolute;
+	top: 30%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	font-size: 36px;
+}
+
+.wrapper {
+	position: absolute;
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: column;
+	width: 500px;
+	height: 270px;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	background-color: #bec6c6;
+	border-radius: 10px;
+}
+
+#input {
+	height: 30px;
+	width: 80%;
+	margin: 40px auto 0px;
+	font-size: 18px;
+}
+
+.range__box {
+	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
+}
+
+#range {
+	width: 65%;
+	margin: 0px 5px 5px 10%;
+}
+
+.range__name {
+	width: 15%;
+	text-align: center;
+	margin: 0px auto 5px 5px;
+	line-height: 50px;
+	font-size: 18px;
+}
+
+#gen__but {
+	height: 30px;
+	width: 80%;
+	margin: 5px auto 5px;
+	font-size: 18px;
+}
+
+#copy__but {
+	height: 30px;
+	width: 80%;
+	margin: 5px auto 10px;
+	font-size: 18px;
+}
+
+.label__wrapper {
+	width: 80%;
+	margin: 5px auto;
+	display: flex;
+	flex-wrap: wrap;
+	font-size: 18px;
+}
+
+.label__box {
+	margin: auto;
+	width: 20%;
+	display: flex;
+}
+
+.box__name {
+	width: 60%;
+	margin-left: 7px;
 }
