--- a/style.css
+++ b/style.css
@@ -66,12 +66,20 @@ body {
 }
 
 #range {
-	width: 65%;
-	margin: 0px 5px 5px 10%;
+	width: 60%;
+	margin: 0px 5px 5px 5px;
+}
+
+.range__index {
+	width: 5%;
+	text-align: center;
+	margin: 0px 5px 5px auto;
+	line-height: 50px;
+	font-size: 18px;
 }
 
 .range__name {
-	width: 15%;
+	width: 10%;
 	text-align: center;
 	margin: 0px auto 5px 5px;
 	line-height: 50px;
